Applied fix on Divi smoothscroll and bootstrap collapse conflict. Adjusted collapsible box css to stack content on top of one another

--- a/assets/css/frontend/lp-style.css
+++ b/assets/css/frontend/lp-style.css
@@ -1133,3 +1133,9 @@ div#tcHiddenFields {float: left;}
 .fa-warning::before, .fa-download:before {
     font-family: 'fontawesome' !important;
 }
+.tc-lp-standards-details,
+.tc-lp-subject-details,
+.tc-lp-objectives-details {
+  float:left;
+  clear: left;
+}
